<resources>
    <string name="input">Вход</string>
    <string name="email">Email</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="password">Пароль</string>
    <string name="password_hint">Введите пароль</string>
    <string name="no_acc">Нету аккаунта?</string>
    <string name="registration">Регитрация</string>
    <string name="forgot_pass">Забыл пароль</string>
</resources>